# ferro

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  LICENSE  PLANS.md  README.md  TASKS.md  deny.toml  setup_hooks.sh
books/: stage_01_nouns.json  stage_02_two_words.json  stage_03_grammar.json  stage_04_qa.json  stage_05_dialogue.json  stage_06_large_corpus.json
doc/: dnb_plan.md  ferro_curiosity_implementation_plan.md  (+3 more)
ferro-core/: Cargo.toml  DESIGN_CORE.md  DESIGN_PHASE1.md  DESIGN_PHASE2.md  VERIFICATION_REPORT.md  VERIFICATION_REPORT_PHASE2.md
ferro-core/src/: audit.rs  brainstem.rs  cerebellum.rs  cerebrum.rs  cognitive_tests.rs  hippocampus.rs  lib.rs  main.rs  message.rs  midbrain.rs  setup.rs  storage.rs
ferro-core/src/cerebrum/: csr.rs  csr_cache.rs  mod.rs  ops.rs  runner.rs  topology.rs
ferro-core/src/cognitive_tests/: hippocampus_tests.rs  midbrain_tests.rs  phase_3_tests.rs  storage_stress_tests.rs  storage_tests.rs
ferro-core/src/cortex/: arena.rs  dynamic_cluster.rs  mod.rs  node.rs  sleep.rs
ferro-core/src/organs/: ear.rs  eye.rs  mod.rs  motor.rs  skin.rs
ferro-core/src/organs/ear/: mfcc.rs  speech_token.rs
ferro-core/src/organs/eye/: frame_delta.rs  image_embedding.rs
ferro-core/src/organs/motor/: vocal_audio.rs  vocal_text.rs
ferro-core/src/organs/proprioception/: output_monitor.rs
ferro-core/src/organs/skin/: cpu_temp.rs  disk_io.rs  process_error.rs  ram_free.rs
ferro-core/src/storage/: backend.rs  manager.rs  migration.rs  mod.rs  reader.rs  redb_engine.rs  sharded_json.rs
ferro-core/tests/: phase2_tests.rs  phase3_tests.rs
(+98 files in other folders)
