[package]
name = "ferro-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
redb = "2.1.0"
csv = "1.3.0"
rayon = "1.8"
libm = "0.2"

[dev-dependencies]
ferro-body = { path = "../ferro-body" }
tempfile = "3.8"


